--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,8 @@
-kfourinline (4:4.11.1-0r0) UNRELEASED; urgency=low
+kfourinline (4:4.11.2-1) UNRELEASED; urgency=low
 
   * New upstream release.
 
- -- Maximiliano Curia <maxy@debian.org>  Tue, 03 Sep 2013 20:23:42 +0200
+ -- Maximiliano Curia <maxy@debian.org>  Mon, 07 Oct 2013 15:08:03 +0200
 
 kfourinline (4:4.10.5-1) unstable; urgency=low
 
