--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,7 @@
 kfourinline (4:4.11.2-1) experimental; urgency=low
 
   * New upstream release.
+  * Update build-dependencies.
 
  -- Maximiliano Curia <maxy@debian.org>  Mon, 07 Oct 2013 15:30:14 +0200
 
