--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+kfourinline (4:4.11.3-2) UNRELEASED; urgency=medium
+
+  * 
+
+ -- Maximiliano Curia <maxy@debian.org>  Thu, 30 Jan 2014 11:30:06 +0100
+
 kfourinline (4:4.11.3-1) unstable; urgency=low
 
   * New upstream release.
