--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,6 @@
 kfourinline (4:4.11.3-2) UNRELEASED; urgency=medium
 
-  * 
+  * Do not disable an empty test set.
 
  -- Maximiliano Curia <maxy@debian.org>  Thu, 30 Jan 2014 11:30:06 +0100
 
