--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+kfourinline (4:4.14.0-1) UNRELEASED; urgency=medium
+
+  * New upstream release.
+
+ -- Maximiliano Curia <maxy@debian.org>  Fri, 22 Aug 2014 06:18:05 +0200
+
 kfourinline (4:4.11.3-2) unstable; urgency=medium
 
   * Do not disable an empty test set.
