--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,8 @@
-kfourinline (4:4.14.0-1) UNRELEASED; urgency=medium
+kfourinline (4:4.14.0-1) unstable; urgency=medium
 
   * New upstream release.
 
- -- Maximiliano Curia <maxy@debian.org>  Fri, 22 Aug 2014 06:18:05 +0200
+ -- Maximiliano Curia <maxy@debian.org>  Sat, 23 Aug 2014 02:39:29 +0200
 
 kfourinline (4:4.11.3-2) unstable; urgency=medium
 
