--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+kfourinline (4:14.12.2-1~) UNRELEASED; urgency=medium
+
+  * New upstream release (14.12.2).
+
+ -- Maximiliano Curia <maxy@debian.org>  Sun, 22 Feb 2015 10:52:12 +0100
+
 kfourinline (4:14.12.2-0ubuntu1) vivid; urgency=medium
 
   * New upstream release
