--- a/debian/changelog
+++ b/debian/changelog
@@ -1,9 +1,9 @@
-kfourinline (4:14.12.2-1~) UNRELEASED; urgency=medium
+kfourinline (4:14.12.2-1) experimental; urgency=medium
 
   * New upstream release (14.12.2).
   * Bump Standards-Version to 3.9.6, no changes needed.
 
- -- Maximiliano Curia <maxy@debian.org>  Sun, 22 Feb 2015 10:52:12 +0100
+ -- Maximiliano Curia <maxy@debian.org>  Sun, 22 Feb 2015 12:55:02 +0100
 
 kfourinline (4:14.12.2-0ubuntu1) vivid; urgency=medium
 
