--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+kfourinline (4:14.12.3-0ubuntu1) UNRELEASED; urgency=medium
+
+  * New upstream release
+
+ -- Scarlett Clark <sgclark@kubuntu.org>  Mon, 09 Mar 2015 10:34:16 -0700
+
 kfourinline (4:14.12.2-1) experimental; urgency=medium
 
   * New upstream release (14.12.2).
