--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,8 @@
-kfourinline (4:14.12.3-0ubuntu1) UNRELEASED; urgency=medium
+kfourinline (4:14.12.3-0ubuntu1) vivid; urgency=medium
 
   * New upstream release
 
- -- Scarlett Clark <sgclark@kubuntu.org>  Mon, 09 Mar 2015 10:34:16 -0700
+ -- Scarlett Clark <sgclark@kubuntu.org>  Fri, 13 Mar 2015 14:55:44 -0700
 
 kfourinline (4:14.12.2-1) experimental; urgency=medium
 
