--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+kfourinline (4:14.12.3-0ubuntu2) UNRELEASED; urgency=medium
+
+  * manual merge kubuntu_stable.
+
+ -- Scarlett Clark <sgclark@kubuntu.org>  Fri, 13 Mar 2015 19:39:06 -0700
+
 kfourinline (4:14.12.3-0ubuntu1) vivid; urgency=medium
 
   * New upstream release
