--- a/debian/changelog
+++ b/debian/changelog
@@ -1,9 +1,10 @@
-kfourinline (4:15.04.0-0ubuntu1) UNRELEASED; urgency=medium
+kfourinline (4:15.04.1-0ubuntu1) UNRELEASED; urgency=medium
 
   * manual merge kubuntu_stable.
   * New upstream release
+  * New upstream release
 
- -- Scarlett Clark <sgclark@kubuntu.org>  Wed, 15 Apr 2015 11:52:31 -0700
+ -- Scarlett Clark <sgclark@kubuntu.org>  Wed, 13 May 2015 21:54:30 -0700
 
 kfourinline (4:14.12.3-0ubuntu1) vivid; urgency=medium
 
