--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,9 @@
-kfourinline (4:15.04.0-1~) UNRELEASED; urgency=medium
+kfourinline (4:15.04.1-1~) UNRELEASED; urgency=medium
 
   * New upstream release (15.04.0).
+  * New upstream release (15.04.1).
 
- -- Maximiliano Curia <maxy@debian.org>  Thu, 23 Apr 2015 16:30:56 +0200
+ -- Maximiliano Curia <maxy@debian.org>  Mon, 18 May 2015 14:19:00 +0200
 
 kfourinline (4:14.12.2-1) experimental; urgency=medium
 
