--- a/debian/changelog
+++ b/debian/changelog
@@ -3,8 +3,9 @@ kfourinline (4:15.04.1-0ubuntu1) UNRELEASED; urgency=medium
   * manual merge kubuntu_stable.
   * New upstream release
   * New upstream release
+  * Vivid backport
 
- -- Scarlett Clark <sgclark@kubuntu.org>  Wed, 13 May 2015 21:54:30 -0700
+ -- Scarlett Clark <sgclark@kubuntu.org>  Wed, 27 May 2015 08:38:26 -0700
 
 kfourinline (4:14.12.3-0ubuntu1) vivid; urgency=medium
 
