--- a/debian/changelog
+++ b/debian/changelog
@@ -1,9 +1,10 @@
-kfourinline (4:15.04.1-1~) UNRELEASED; urgency=medium
+kfourinline (4:15.04.3-1~) UNRELEASED; urgency=medium
 
   * New upstream release (15.04.0).
   * New upstream release (15.04.1).
+  * New upstream release (15.04.3).
 
- -- Maximiliano Curia <maxy@debian.org>  Mon, 18 May 2015 14:19:00 +0200
+ -- Maximiliano Curia <maxy@debian.org>  Fri, 03 Jul 2015 16:29:34 +0200
 
 kfourinline (4:14.12.2-1) experimental; urgency=medium
 
