--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,8 @@
-kfourinline (4:15.07.90-0ubuntu1) UNRELEASED; urgency=medium
+kfourinline (4:15.07.90-0ubuntu1) wily; urgency=medium
 
   * new upstream beta release
 
- -- Jonathan Riddell <jriddell@ubuntu.com>  Thu, 13 Aug 2015 11:14:05 +0100
+ -- Jonathan Riddell <jriddell@ubuntu.com>  Tue, 18 Aug 2015 09:49:54 +0100
 
 kfourinline (4:15.04.2-0ubuntu1) wily; urgency=medium
 
