--- a/debian/changelog
+++ b/debian/changelog
@@ -1,10 +1,11 @@
-kfourinline (4:15.04.3-1~) UNRELEASED; urgency=medium
+kfourinline (4:15.08.0-1~) UNRELEASED; urgency=medium
 
   * New upstream release (15.04.0).
   * New upstream release (15.04.1).
   * New upstream release (15.04.3).
+  * New upstream release (15.08.0).
 
- -- Maximiliano Curia <maxy@debian.org>  Fri, 03 Jul 2015 16:29:34 +0200
+ -- Maximiliano Curia <maxy@debian.org>  Wed, 09 Sep 2015 16:18:45 +0200
 
 kfourinline (4:14.12.2-1) experimental; urgency=medium
 
