--- a/debian/changelog
+++ b/debian/changelog
@@ -1,11 +1,11 @@
-kfourinline (4:15.08.0-1~) UNRELEASED; urgency=medium
+kfourinline (4:15.08.0-1) unstable; urgency=medium
 
   * New upstream release (15.04.0).
   * New upstream release (15.04.1).
   * New upstream release (15.04.3).
   * New upstream release (15.08.0).
 
- -- Maximiliano Curia <maxy@debian.org>  Wed, 09 Sep 2015 16:18:45 +0200
+ -- Maximiliano Curia <maxy@debian.org>  Wed, 09 Sep 2015 18:11:35 +0200
 
 kfourinline (4:15.08.0-0ubuntu1) wily; urgency=medium
 
