--- a/debian/changelog
+++ b/debian/changelog
@@ -1,9 +1,9 @@
-kfourinline (4:15.08.2-0ubuntu1) UNRELEASED; urgency=medium
+kfourinline (4:15.08.2-0ubuntu1) wily; urgency=medium
 
   * Vivid backport
   * New upstream release
 
- -- Scarlett Clark <sgclark@kubuntu.org>  Fri, 09 Oct 2015 14:07:49 -0700
+ -- Scarlett Clark <sgclark@kubuntu.org>  Wed, 14 Oct 2015 12:24:42 +0100
 
 kfourinline (4:15.08.1-0ubuntu1) wily; urgency=medium
 
