--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+kfourinline (4:15.12.0-1~) UNRELEASED; urgency=medium
+
+  * New upstream release (15.12.0).
+
+ -- Maximiliano Curia <maxy@debian.org>  Wed, 16 Dec 2015 16:15:17 +0100
+
 kfourinline (4:15.08.0-1) unstable; urgency=medium
 
   * New upstream release (15.04.0).
