--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,9 @@
-kfourinline (4:15.12.0-1~) UNRELEASED; urgency=medium
+kfourinline (4:15.12.1-1~) UNRELEASED; urgency=medium
 
   * New upstream release (15.12.0).
+  * New upstream release (15.12.1).
 
- -- Maximiliano Curia <maxy@debian.org>  Wed, 16 Dec 2015 16:15:17 +0100
+ -- Maximiliano Curia <maxy@debian.org>  Fri, 29 Jan 2016 11:17:06 +0100
 
 kfourinline (4:15.08.0-1) unstable; urgency=medium
 
