--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+kfourinline (4:15.12.1-1ubuntu1) UNRELEASED; urgency=medium
+
+  * Debian merge: No remaining changes.
+
+ -- Scarlett Clark <sgclark@kubuntu.org>  Wed, 03 Feb 2016 10:26:11 -0800
+
 kfourinline (4:15.12.1-1) experimental; urgency=medium
 
   * New upstream release (15.12.0).
