--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+kfourinline (4:15.12.2-0ubuntu1) UNRELEASED; urgency=medium
+
+  * New upstream bugfix release
+
+ -- Scarlett Clark <sgclark@kubuntu.org>  Wed, 09 Mar 2016 21:23:09 -0800
+
 kfourinline (4:15.12.1-1ubuntu1) xenial; urgency=medium
 
   * Debian merge: No remaining changes.
