--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+kfourinline (4:15.12.1-1ubuntu2) xenial; urgency=medium
+
+  * No-change rebuild against libkf5kdegames7
+
+ -- Philip Muškovac <yofel@kubuntu.org>  Sun, 13 Mar 2016 22:22:39 +0100
+
 kfourinline (4:15.12.1-1ubuntu1) xenial; urgency=medium
 
   * Debian merge: No remaining changes.
