--- a/debian/changelog
+++ b/debian/changelog
@@ -1,9 +1,9 @@
-kfourinline (4:15.12.3-0ubuntu1) UNRELEASED; urgency=medium
+kfourinline (4:15.12.3-0ubuntu1) xenial; urgency=medium
 
   * New upstream bugfix release
   * New upstream bugfix release
 
- -- Scarlett Clark <sgclark@kubuntu.org>  Wed, 16 Mar 2016 19:36:59 -0700
+ -- Scarlett Clark <sgclark@kubuntu.org>  Thu, 14 Apr 2016 15:21:01 -0700
 
 kfourinline (4:15.12.1-1ubuntu2) xenial; urgency=medium
 
