--- a/debian/changelog
+++ b/debian/changelog
@@ -1,10 +1,8 @@
-kfourinline (4:16.08.0-1~1.gbp693de3) UNRELEASED; urgency=medium
+kfourinline (4:16.08.0-1) unstable; urgency=medium
 
-  ** SNAPSHOT build @693de3a335600c43c375744943faf47994870be7 **
+  * New upstream release (16.08.0)
 
-  * UNRELEASED
-
- -- Maximiliano Curia <jenkins@gnuservers.com.ar>  Thu, 18 Aug 2016 20:27:13 +0200
+ -- Maximiliano Curia <maxy@debian.org>  Wed, 19 Oct 2016 00:08:27 +0200
 
 kfourinline (4:16.04.0-1) unstable; urgency=medium
 
