--- a/debian/changelog
+++ b/debian/changelog
@@ -1,12 +1,16 @@
-kfourinline (4:17.08.1-1~1) UNRELEASED; urgency=medium
+kfourinline (4:17.08.3-1~1) UNRELEASED; urgency=medium
 
+  [ Maximiliano Curia ]
   * New upstream release (17.08.1)
   * Bump Standards-Version to 4.1.0.
   * Update upstream metadata
   * Update build-deps and deps with the info from cmake
   * Update uploaders list as requested by MIA team (Closes: #879340)
 
- -- Maximiliano Curia <maxy@debian.org>  Tue, 31 Oct 2017 18:00:46 +0100
+  [ Pino Toscano ]
+  * New upstream release.
+
+ -- Pino Toscano <pino@debian.org>  Sat, 18 Nov 2017 11:20:23 +0100
 
 kfourinline (4:17.08.1-0neon) xenial; urgency=medium
 
