--- a/debian/changelog
+++ b/debian/changelog
@@ -16,6 +16,10 @@ kfourinline (4:17.08.3-1~1) UNRELEASED; urgency=medium
   * Stop forcing debian/tmp as local installation directory, installing
     everything to the final location
     - drop kfourinline.install, no more useful now
+  * Remove unused build dependencies: libkf5completion-dev,
+    libkf5dbusaddons-dev, libkf5declarative-dev, libkf5iconthemes-dev,
+    libkf5itemmodels-dev, libkf5itemviews-dev, libkf5kdelibs4support-dev,
+    libkf5kio-dev, and libkf5notifyconfig-dev.
 
  -- Pino Toscano <pino@debian.org>  Sat, 18 Nov 2017 11:20:23 +0100
 
