--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,6 @@
-kfourinline (4:17.08.3-1~1) UNRELEASED; urgency=medium
+kfourinline (4:17.08.3-1) unstable; urgency=medium
+
+  * Team upload.
 
   [ Maximiliano Curia ]
   * New upstream release (17.08.1)
@@ -21,7 +23,7 @@ kfourinline (4:17.08.3-1~1) UNRELEASED; urgency=medium
     libkf5itemmodels-dev, libkf5itemviews-dev, libkf5kdelibs4support-dev,
     libkf5kio-dev, and libkf5notifyconfig-dev.
 
- -- Pino Toscano <pino@debian.org>  Sat, 18 Nov 2017 11:20:23 +0100
+ -- Pino Toscano <pino@debian.org>  Sat, 18 Nov 2017 14:54:55 +0100
 
 kfourinline (4:17.08.1-0neon) xenial; urgency=medium
 
